         - check_memory: change default type on linux to physical,swap
         - fix evaluating nested filter conditions
         - fix check_drivesize missing performance data when using free_bytes threshold (#136)
         - fix check_http/check_tcp/check_dns help (#135)
         - fix using condition alias on nested filters
         - update windows exporter to 0.27.2

0.26     Wed Jul 17 15:23:37 CEST 2024
         - fix check_os_version windows build version (#134)
         - update node exporter to 1.8.2
         - chdir windows service into to shared-path folder
         - fix escaping arguments in windows ps1 scripts
         - fill unused $ARGx$ macros with empty space (#110)
         - fix if/else expression evaluation (#126)

0.25     Fri Jun 14 14:34:25 CEST 2024
         - update node exporter to 1.8.1
         - migrate v3 to github.com/shirou/gopsutil/v4
         - add device filter for network counter
         - adjust default metric counter interval to 5s and buffer length to 15m
         - lower agent memory and cpu footprint

0.24     Sun May 12 17:42:43 CEST 2024
         - update node exporter to 1.8.0
         - add native aarch64 (arm64) packages for windows
         - add support for extending default filter/warn/crit
         - check_service: use cgroup pids if no main pid available
         - fix memory leak in check_service on windows
         - fix memory leak in check_drivesize on windows
         - fix missing scripts in inventory

0.23     Mon Apr 15 17:29:53 CEST 2024
         - fix detecting mounted volumes on windows
         - add ca option for client certificates (Gent00157)

0.22     Sat Apr  6 21:15:06 CEST 2024
         - fix check_mount checking options
         - check_mount skip default filter if mount point specified
         - improve documentation

0.21     Thu Mar 28 17:18:25 CET 2024
         - add http config ini includes
         - add osx pkg uninstaller