@@ -3,9 +3,10 @@
 package snclient
 
 import (
+	"context"
 	"fmt"
 )
 
-func (l *CheckTasksched) addTasks(_ *CheckData) error {
+func (l *CheckTasksched) addTasks(_ context.Context, _ *Agent, _ *CheckData) error {
 	return fmt.Errorf("check_tasksched is a windows only check")
 }
