@@ -8,6 +8,7 @@ next:
          - fix check_drivesize missing performance data when using free_bytes threshold (#136)
          - fix check_http/check_tcp/check_dns help (#135)
          - fix using condition alias on nested filters
+         - fix check_tasksched memory leak (#122)
          - update windows exporter to 0.27.2
 
 0.26     Wed Jul 17 15:23:37 CEST 2024
